[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graph.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0745098, 0.470588, 0.560784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.4, 0.572549, 0.713726, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.737255, 0.65098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.12549, 0.815686, 0.831373, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Graph" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
right_disconnects = true
scroll_offset = Vector2( -40, -40 )

[node name="GraphNode" type="GraphNode" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 133.0
margin_bottom = 158.0
mouse_filter = 1
custom_colors/title_color = Color( 1, 1, 1, 1 )
custom_styles/frame = SubResource( 1 )
custom_styles/selectedframe = SubResource( 2 )
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 1
slot/1/left_color = Color( 0, 1, 0, 1 )
slot/1/right_enabled = true
slot/1/right_type = 1
slot/1/right_color = Color( 0, 1, 0, 1 )
slot/2/left_enabled = true
slot/2/left_type = 1
slot/2/left_color = Color( 1, 1, 0, 1 )
slot/2/right_enabled = true
slot/2/right_type = 2
slot/2/right_color = Color( 1, 0, 0, 1 )

[node name="Control1" type="Control" parent="GraphNode"]
margin_left = 2.0
margin_top = 2.0
margin_right = 91.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 24 )
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="GraphNode"]
margin_left = 2.0
margin_top = 27.0
margin_right = 91.0
margin_bottom = 91.0
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="GraphNode/CenterContainer"]
margin_left = 12.0
margin_right = 76.0
margin_bottom = 64.0
texture = ExtResource( 2 )

[node name="Control2" type="Control" parent="GraphNode"]
margin_left = 2.0
margin_top = 92.0
margin_right = 91.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 24 )
mouse_filter = 1

[node name="AddButton" type="Button" parent="."]
margin_left = 263.0
margin_top = 11.0
margin_right = 338.0
margin_bottom = 31.0
text = "Add Node"

[node name="HomeButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Home"

[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="delete_nodes_request" from="GraphEdit" to="." method="_on_GraphEdit_delete_nodes_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="node_selected" from="GraphEdit" to="." method="_on_GraphEdit_node_selected"]
[connection signal="node_unselected" from="GraphEdit" to="." method="_on_GraphEdit_node_unselected"]
[connection signal="pressed" from="AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="HomeButton" to="." method="_on_HomeButton_pressed"]
